fixed issue with font size and book size being mis-aligned

--- a/style.css
+++ b/style.css
@@ -64,9 +64,10 @@ a:hover{
     gap:8px;
 }
 .book{
-    width:130px;
-    height:170px;
-    font-size:1.1em;
+    width:140px;
+    height:190px;
+    font-size:1em;
+    text-align:center;
     background-color: crimson;
     border-radius:1em;
     border: 10px solid rgb(0, 0, 0);
